--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <h1>Underwriter Dashboard</h1>
           <p>Welcome, Login to your portal account.</p>
         </div>
-        <form id="loginForm" onsubmit="return validateForm();">
-          <!-- <div id="error-message" style="color: red; margin-top: 10px"></div> -->
+        <form id="loginForm">
+          <div id="error-message"></div>
           <div class="form-group">
             <label for="loginId">Login ID</label>
             <div>
@@ -89,15 +89,7 @@
 
             <button class="reset" type="button">Reset Password</button>
           </div>
-          <button
-            id="myBtn"
-            type="submit"
-            class="disabled-button"
-            onclick="validateForm()"
-            disabled
-          >
-            Login
-          </button>
+          <button id="myBtn" type="submit">Login</button>
         </form>
       </div>
       <div class="right">
@@ -120,6 +112,11 @@
       </div>
     </div>
     <script>
+      let submitButton = document.getElementById("myBtn");
+      let errorMessage = document.getElementById("error-message");
+      const loginInput = document.getElementById("login");
+      const passwordInput = document.getElementById("password");
+
       function togglePasswordVisibility() {
         const passwordInput = document.getElementById("password");
         const showText = document.querySelector(".show");
@@ -132,35 +129,35 @@
         }
       }
 
-      function validateForm() {
-        const loginInput = document.getElementById("login");
-        const passwordInput = document.getElementById("password");
+      function validateForm(e) {
+        e.preventDefault();
         if (loginInput.value === "admin" && passwordInput.value === "admin") {
           alert("Login successful!");
           window.location.href = "./dashboard.html";
-          return true;
         } else {
-          alert("Invalid login or password.");
-          return false;
+          // alert("Invalid login or password.");
+          errorMessage.style.display = "block";
+          errorMessage.innerHTML = "Invalid Username or Password";
+          setTimeout(() => {
+            errorMessage.style.display = "none";
+          }, 5000);
         }
       }
 
-      const loginInput = document.getElementById("login");
-      const passwordInput = document.getElementById("password");
-      const submitButton = document.getElementById("myBtn");
+      submitButton.addEventListener("click", validateForm);
 
-      function checkInputs() {
-        if (loginInput.value === "admin" && passwordInput.value === "admin") {
-          submitButton.disabled = false;
-          submitButton.classList.remove("disabled-button");
-        } else {
-          submitButton.disabled = true;
-          submitButton.classList.add("disabled-button");
-        }
-      }
+      // function checkInputs() {
+      //   if (loginInput.value === "admin" && passwordInput.value === "admin") {
+      //     submitButton.disabled = false;
+      //     submitButton.classList.remove("disabled-button");
+      //   } else {
+      //     submitButton.disabled = true;
+      //     submitButton.classList.add("disabled-button");
+      //   }
+      // }
 
-      loginInput.addEventListener("input", checkInputs);
-      passwordInput.addEventListener("input", checkInputs);
+      // loginInput.addEventListener("input", checkInputs);
+      // passwordInput.addEventListener("input", checkInputs);
     </script>
   </body>
 </html>
