--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -154,7 +154,7 @@
             <option value="engineering">Engineering</option>
           </select>
         </div>
-        <button id= "jaju" class="create-request" disabled> <img src="images/bullet.png" alt=""> Create Request</button></div>
+        <button id= "jaju" class="create-request" disabled> &#x27A9; Create Request</button></div>
         
       </div>
     </div>
