--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/login.css" />
     <link rel="icon" href="images/favicon-16x16.png" type="favicon" />
   </head>
-  <body class="body-center">
+  <body>
     <div class="container">
       <div class="left">
         <div class="logo-container">
